Bug 200437 fix assertion in GetCookie() p=dwitte@stanford.edu r=mvl sr=darin